# bldc_car_demo

./: README.md  mecanum.md  package.xml  setup.cfg  setup.py
bldc_car_demo/nodes/: cmd_vel_to_voltage.py  state_bridge.py
bldc_car_demo/params/: car.yaml
launch/: sim_car.launch.py
models/bldc_car/: model.config  model.sdf
models/worlds/: flat_world.sdf
resource/: bldc_car_demo
